fix[overflow menu icon]: overflow menu icon on color usage tab too small #1861

--- a/src/components/ColorTokenTable/color-token-table.scss
+++ b/src/components/ColorTokenTable/color-token-table.scss
@@ -84,8 +84,8 @@
 }
 
 .color-token-value .bx--overflow-menu__icon {
-  width: rem(12px);
-  height: rem(12px);
+  width: rem(16px);
+  height: rem(16px);
 }
 
 .color-token-value > div {
